Use or remove unused methods